timetable and board fix

--- a/templates/board.html
+++ b/templates/board.html
@@ -113,6 +113,9 @@
                     <div class="post-content-wrapper">
                         <div class="post-title">
                             {{ post['title'] }}
+                            {% if post['comment_count'] > 0 %}
+                            <span style="color: #3498db; font-size: 0.9em;"> ({{ post['comment_count'] }})</span>
+                            {% endif %}
                             {% if post['user_id'] %}
                             <span class="verified-badge">✓ 인증됨</span>
                             {% endif %}
@@ -128,7 +131,7 @@
                                     {{ post['author'] }}
                                 {% endif %}
                             </span>
-                            <span style="margin-left: 1rem;">📅 {{ post['created_at'].strftime('%Y-%m-%d %H:%M') if post['created_at'].__class__.__name__ == 'datetime' else post['created_at'][:16] }}</span>
+                            <span style="margin-left: 1rem;">📅 {{ post['created_at']|kst }}</span>
                         </div>
                     </div>
                 </div>
