--- a/templates/login.html
+++ b/templates/login.html
@@ -33,6 +33,7 @@
             <li><a href="/">🏠 홈</a></li>
             <li><a href="/board/free">💬 자유게시판</a></li>
             <li><a href="/board/project">📁 프로젝트게시판</a></li>
+            <li><a href="/board/share">🔗 공유게시판</a></li>
         </ul>
     </nav>
 
