--- a/templates/user_profile.html
+++ b/templates/user_profile.html
@@ -32,6 +32,7 @@
             <li><a href="/">🏠 홈</a></li>
             <li><a href="/board/free">💬 자유게시판</a></li>
             <li><a href="/board/project">📁 프로젝트게시판</a></li>
+            <li><a href="/board/share">🔗 공유게시판</a></li>
             {% if session.get('user_id') %}
             <li><a href="/logout">🚪 로그아웃</a></li>
             {% else %}
