--- a/templates/view.html
+++ b/templates/view.html
@@ -66,6 +66,7 @@
             <li><a href="/">🏠 홈</a></li>
             <li><a href="/board/free">💬 자유게시판</a></li>
             <li><a href="/board/project">📁 프로젝트게시판</a></li>
+            <li><a href="/board/share">🔗 공유게시판</a></li>
             {% if session.get('user_id') %}
             <li><a href="/user/{{ session['user_id'] }}">👤 {{ session['username'] }}</a></li>
             <li><a href="/logout">🚪 로그아웃</a></li>
@@ -108,7 +109,7 @@
             </div>
             {% endif %}
 
-            <div class="post-content">{{ post['content']|safe }}</div>
+            <div class="post-content">{{ post['content']|sanitize|safe }}</div>
 
             <div style="margin-top: 2rem; display: flex; gap: 1rem;">
                 <a href="/board/{{ post['board_type'] }}" class="btn" style="background: #95a5a6;">목록으로</a>
